<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtViewCountryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country_name"
        android:textColor="@color/black"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/countryInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/txtViewCountryName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/totalCasesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_cases"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/totalCasesNumber"/>

        <TextView
            android:id="@+id/totalCasesNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/totalCasesText"/>

        <TextView
            android:id="@+id/newCasesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_cases"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/totalCasesText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newCasesNumber"/>

        <TextView
            android:id="@+id/newCasesNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/totalCasesNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newCasesText"/>

        <TextView
            android:id="@+id/totalDeathsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_deaths"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/newCasesText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newCasesNumber"/>

        <TextView
            android:id="@+id/totalDeathsNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/newCasesNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newCasesText"/>

        <TextView
            android:id="@+id/newDeathsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_deaths"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/totalDeathsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newCasesNumber"/>

        <TextView
            android:id="@+id/newDeathsNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/totalDeathsNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newCasesText"/>

        <TextView
            android:id="@+id/totalRecoveredText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_recovered"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/newDeathsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newCasesNumber"/>

        <TextView
            android:id="@+id/totalRecoveredNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/newDeathsNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newCasesText"/>

        <TextView
            android:id="@+id/totalActiveCasesText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_active_cases"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/totalRecoveredText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newCasesNumber"/>

        <TextView
            android:id="@+id/totalActiveCasesNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/totalRecoveredNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newCasesText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last Update: "
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/totalActiveCasesNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>